@@ -52,8 +52,7 @@ Install-Share -Name $deployShareName `
 
 $sslCertPath = 'Path\to\SSL\certificate.cer'
 $cert = Install-Certificate -Path $sslCertPath -StoreLocation LocalMachine -StoreName My
-Set-SslCertificateBinding -IPPort '0.0.0.0:80' -ApplicationID ([Guid]::NewGuid()) `
-                          -Thumbprint $cert.Thumbprint
+Install-SslCertificateBinding -ApplicationID ([Guid]::NewGuid()) -Thumbprint $cert.Thumbprint
 
 $appPoolName = 'ExampleAppPool'
 Install-IisAppPool -Name $appPoolName -ServiceAccount NetworkService
